--- a/test.html
+++ b/test.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Gutter Clearing & Gutter Services in Kirk Sandall, Doncaster | Home Repairs 4U</title>
+<title>Gutter Clearing & Repairs in Kirk Sandall, Doncaster | Home Repairs 4U</title>
 
 <link rel="canonical" href="https://homerepairs4u.com/local/gutter-services-kirk-sandall.html">
 
-<meta name="description" content="Reliable gutter clearing, cleaning, repairs and replacement in Kirk Sandall, Doncaster. Local gutter services near you. Call 07735 873694.">
+<meta name="description" content="Reliable gutter clearing, cleaning, repairs and replacement in Kirk Sandall, Doncaster. Local service to prevent leaks, damp and water damage. Call 07735 873694.">
 
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="preload" as="image" href="/images/logo.webp">
@@ -22,7 +22,7 @@ header{background:#fff;padding:26px 12px;text-align:center;border-bottom:4px sol
 .call-btn:hover{background:#333;}
 main{max-width:950px;margin:0 auto;background:#fff;padding:28px 18px;}
 h1,h2,h3{color:#111;}
-.service-image{width:100%;max-width:900px;display:block;margin:22px auto;border-radius:6px;cursor:pointer;}
+.service-image{width:100%;max-width:900px;display:block;margin:20px auto;border-radius:6px;cursor:pointer;}
 .lightbox{display:none;position:fixed;z-index:9999;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);align-items:center;justify-content:center;}
 .lightbox img{max-width:95%;max-height:95%;border-radius:6px;}
 .lightbox:target{display:flex;}
@@ -30,145 +30,137 @@ footer{background:#000;color:#fff;text-align:center;padding:26px 15px;margin-top
 footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 </style>
 
-<!-- ORGANISATION SCHEMA (VALID – NO POSTALADDRESS) -->
+<!-- Organisation Schema (FIXED) -->
 <script type="application/ld+json">
 {
-"@context": "https://schema.org",
-"@type": "HomeAndConstructionBusiness",
-"name": "Home Repairs 4U",
-"url": "https://homerepairs4u.com/",
-"logo": "https://homerepairs4u.com/images/logo.webp",
-"telephone": "+447735873694",
-"areaServed": {
-"@type": "Place",
-"name": "Kirk Sandall, Doncaster"
+"@context":"https://schema.org",
+"@type":"HomeAndConstructionBusiness",
+"name":"Home Repairs 4U",
+"url":"https://homerepairs4u.com/",
+"logo":"https://homerepairs4u.com/images/logo.webp",
+"telephone":"+447735873694",
+"openingHours":"Mo-Su 07:00-20:00",
+"areaServed":{
+"@type":"Place",
+"name":"Kirk Sandall, Doncaster"
 },
-"openingHours": "Mo-Su 07:00-20:00",
-"priceRange": "£50–£3000"
+"priceRange":"£50–£3000"
 }
 </script>
 
-<!-- BREADCRUMB SCHEMA (FIXED – VALID) -->
+<!-- Breadcrumb Schema (FIXED) -->
 <script type="application/ld+json">
 {
-"@context": "https://schema.org",
-"@type": "BreadcrumbList",
-"itemListElement": [{
-"@type": "ListItem",
-"position": 1,
-"name": "Home",
-"item": "https://homerepairs4u.com/"
+"@context":"https://schema.org",
+"@type":"BreadcrumbList",
+"itemListElement":[{
+"@type":"ListItem",
+"position":1,
+"name":"Home",
+"item":"https://homerepairs4u.com/"
 },{
-"@type": "ListItem",
-"position": 2,
-"name": "Guttering Services",
-"item": "https://homerepairs4u.com/services/guttering.html"
+"@type":"ListItem",
+"position":2,
+"name":"Gutter Services",
+"item":"https://homerepairs4u.com/services/guttering.html"
 },{
-"@type": "ListItem",
-"position": 3,
-"name": "Kirk Sandall"
+"@type":"ListItem",
+"position":3,
+"name":"Kirk Sandall"
 }]
 }
 </script>
 
-<!-- FAQ SCHEMA -->
+<!-- FAQ Schema -->
 <script type="application/ld+json">
 {
-"@context": "https://schema.org",
-"@type": "FAQPage",
-"mainEntity": [{
-"@type": "Question",
-"name": "How often should gutters be cleared in Kirk Sandall?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Most properties in Kirk Sandall benefit from gutter clearing once or twice a year, especially if trees are nearby."
-}
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[{
+"@type":"Question",
+"name":"Do you provide gutter clearing near me in Kirk Sandall?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes, we provide local gutter clearing, cleaning and repairs throughout Kirk Sandall and surrounding Doncaster areas."}
 },{
-"@type": "Question",
-"name": "Do you provide local gutter services near me?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes, Home Repairs 4U provides local gutter services throughout Kirk Sandall and surrounding areas of Doncaster."
-}
+"@type":"Question",
+"name":"How often should gutters be cleared?",
+"acceptedAnswer":{"@type":"Answer","text":"Most properties benefit from gutter clearing once or twice a year, especially if surrounded by trees."}
 },{
-"@type": "Question",
-"name": "Can damaged gutters be repaired instead of replaced?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Minor leaks and loose sections can often be repaired. We assess the condition first and only recommend replacement when necessary."
-}
+"@type":"Question",
+"name":"Can you repair leaking gutters?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes. We repair joints, brackets and minor damage, and replace guttering when repairs are no longer effective."}
 }]
 }
 </script>
 
 </head>
+
 <body>
 
 <header>
-<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200"><br>
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
+<br>
 <a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a><br>
 <a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
 </header>
 
 <main>
 
-<h1>Gutter Clearing & Gutter Services in Kirk Sandall, Doncaster</h1>
+<h1>Gutter Services in Kirk Sandall, Doncaster</h1>
 
 <p>
-If you are looking for reliable <strong>gutter services near you in Kirk Sandall</strong>, Home Repairs 4U provides professional gutter clearing, cleaning, repairs and replacement for residential and small commercial properties across the area.
+Home Repairs 4U provides professional gutter clearing, cleaning, repairs and replacement for homes in Kirk Sandall. Our local service helps protect properties from water damage, damp issues and long-term structural problems caused by blocked or failing gutter systems.
 </p>
 
+<h2>Instant Gutter Quote Calculator</h2>
+
+<!-- Calculator left EXACTLY as requested -->
+<form id="quoteForm">
+<label for="metres">Total gutter length (metres)</label>
+<input type="number" id="metres" min="1" step="0.1" required>
+
+<div>
+<input type="checkbox" id="clearing"> Gutter clearing
+</div>
+<div>
+<input type="checkbox" id="cleaning"> Gutter cleaning
+</div>
+<div>
+<input type="checkbox" id="replacement"> Gutter replacement
+</div>
+
+<button type="button" onclick="calculateQuote()" class="call-btn">Get Estimate</button>
+</form>
+
+<div id="quoteResult" style="margin-top:22px;font-size:18px;font-weight:bold;"></div>
+
+<script>
+function calculateQuote(){
+const m=parseFloat(document.getElementById('metres').value);
+if(!m||m<=0){alert("Please enter a valid length.");return;}
+let total=0;let items=[];
+if(clearing.checked){let p=m*5;total+=p;items.push(`Gutter clearing: £${p.toFixed(2)}`);}
+if(cleaning.checked){let p=m*5;total+=p;items.push(`Gutter cleaning: £${p.toFixed(2)}`);}
+if(replacement.checked){let p=m*21.5;total+=p;items.push(`Gutter replacement: £${p.toFixed(2)}`);}
+quoteResult.innerHTML=items.length?`<ul>${items.map(i=>`<li>${i}</li>`).join("")}</ul><p><strong>Estimated total: £${total.toFixed(2)}</strong></p>`:"<p>Please select at least one service.</p>";
+}
+</script>
+
+<h2>Our Gutter Services in Kirk Sandall</h2>
+
+<h3>Gutter Clearing</h3>
+<a href="#img1"><img src="/images/clearing-service.webp" alt="Gutter clearing in Kirk Sandall Doncaster" class="service-image"></a>
+<div id="img1" class="lightbox"><a href="#"><img src="/images/clearing-service.webp" alt=""></a></div>
+
+<h3>Gutter Cleaning</h3>
+<a href="#img2"><img src="/images/cleaned-gutters.webp" alt="Gutter cleaning service in Kirk Sandall" class="service-image"></a>
+<div id="img2" class="lightbox"><a href="#"><img src="/images/cleaned-gutters.webp" alt=""></a></div>
+
+<h3>Gutter Repairs & Replacement</h3>
+<a href="#img3"><img src="/images/replaced-gutter.webp" alt="Gutter replacement work in Kirk Sandall" class="service-image"></a>
+<div id="img3" class="lightbox"><a href="#"><img src="/images/replaced-gutter.webp" alt=""></a></div>
+
 <p>
-Gutters play a critical role in directing rainwater safely away from your property. When blocked, leaking or damaged, they can quickly lead to damp problems, water staining and long-term structural issues. Regular maintenance helps protect your home and avoid unnecessary repair costs.
-</p>
-
-<h2>Local Gutter Clearing in Kirk Sandall</h2>
-
-<p>
-Our gutter clearing service removes leaves, moss and debris that build up throughout the year. Properties in Kirk Sandall are particularly prone to blockages due to surrounding greenery and seasonal weather changes.
-</p>
-
-<a href="#img-clear">
-<img src="/images/clearing-service.webp" alt="Gutter clearing service in Kirk Sandall Doncaster" class="service-image">
-</a>
-<div id="img-clear" class="lightbox"><a href="#"><img src="/images/clearing-service.webp" alt=""></a></div>
-
-<h2>Gutter Cleaning Services</h2>
-
-<p>
-External gutter cleaning improves both appearance and performance. Clean gutters dry more efficiently, helping to reduce algae growth and extend the lifespan of the system.
-</p>
-
-<a href="#img-clean">
-<img src="/images/cleaned-gutters.webp" alt="Cleaned gutters on a property in Kirk Sandall" class="service-image">
-</a>
-<div id="img-clean" class="lightbox"><a href="#"><img src="/images/cleaned-gutters.webp" alt=""></a></div>
-
-<h2>Gutter Repairs & Replacement</h2>
-
-<p>
-Loose joints, leaks and sagging gutters can often be repaired if caught early. Where systems are beyond repair, we provide full gutter replacement using durable materials designed for long-term performance.
-</p>
-
-<a href="#img-replace">
-<img src="/images/replaced-gutter.webp" alt="New gutter installation in Kirk Sandall Doncaster" class="service-image">
-</a>
-<div id="img-replace" class="lightbox"><a href="#"><img src="/images/replaced-gutter.webp" alt=""></a></div>
-
-<h2>Why Choose Home Repairs 4U</h2>
-
-<ul>
-<li>Local gutter services near Kirk Sandall</li>
-<li>Clear pricing and honest advice</li>
-<li>Safe access methods used</li>
-<li>Work completed with minimal disruption</li>
-</ul>
-
-<p>
-We also provide gutter services in nearby areas including
-<a href="/local/gutter-services-bentley.html">Bentley</a>,
-<a href="/local/gutter-services-askern.html">Askern</a> and
-<a href="/local/gutter-services-darrington.html">Darrington</a>.
+We work on houses, bungalows and small commercial properties across Kirk Sandall, offering practical advice and dependable workmanship on every job.
 </p>
 
 <div style="text-align:center;margin:36px 0;">
