--- a/test.html
+++ b/test.html
@@ -4,33 +4,35 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Gutter Clearing & Repairs in Kirk Sandall, Doncaster | Home Repairs 4U</title>
+<title>Gutter Clearing & Gutter Services in Kirk Sandall, Doncaster | Home Repairs 4U</title>
 
 <link rel="canonical" href="https://homerepairs4u.com/local/gutter-services-kirk-sandall.html">
 
-<meta name="description" content="Reliable gutter clearing, cleaning, repairs and replacement in Kirk Sandall, Doncaster. Local service to prevent leaks, damp and water damage. Call 07735 873694.">
+<meta name="description" content="Professional gutter clearing, cleaning, repairs and replacement in Kirk Sandall, Doncaster. Local, reliable gutter services to prevent leaks and water damage. Call 07735 873694.">
 
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="preload" as="image" href="/images/logo.webp">
 
 <style>
 html{-webkit-text-size-adjust:100%;}
-body{margin:0;font-family:Arial,sans-serif;background:#f8f8f8;color:#222;line-height:1.65;}
+body{margin:0;font-family:Arial,sans-serif;background:#f8f8f8;color:#222;line-height:1.7;}
 header{background:#fff;padding:26px 12px;text-align:center;border-bottom:4px solid #27ae60;}
 .logo{max-height:90px;width:auto;}
 .call-btn{display:inline-block;margin-top:18px;padding:15px 30px;background:#000;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px;min-height:48px;}
 .call-btn:hover{background:#333;}
-main{max-width:950px;margin:0 auto;background:#fff;padding:28px 18px;}
+main{max-width:960px;margin:0 auto;background:#fff;padding:30px 20px;}
 h1,h2,h3{color:#111;}
-.service-image{width:100%;max-width:900px;display:block;margin:20px auto;border-radius:6px;cursor:pointer;}
+.service-image{width:100%;max-width:900px;display:block;margin:26px auto;border-radius:6px;cursor:pointer;}
 .lightbox{display:none;position:fixed;z-index:9999;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);align-items:center;justify-content:center;}
 .lightbox img{max-width:95%;max-height:95%;border-radius:6px;}
 .lightbox:target{display:flex;}
 footer{background:#000;color:#fff;text-align:center;padding:26px 15px;margin-top:40px;font-size:14px;}
 footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
+.breadcrumbs{font-size:14px;margin-bottom:18px;color:#000;}
+.breadcrumbs span{color:#000;}
 </style>
 
-<!-- Organisation Schema (FIXED) -->
+<!-- ORGANISATION SCHEMA (VALID) -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
@@ -39,61 +41,77 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 "url":"https://homerepairs4u.com/",
 "logo":"https://homerepairs4u.com/images/logo.webp",
 "telephone":"+447735873694",
-"openingHours":"Mo-Su 07:00-20:00",
 "areaServed":{
 "@type":"Place",
 "name":"Kirk Sandall, Doncaster"
 },
-"priceRange":"£50–£3000"
+"openingHours":"Mo-Su 07:00-20:00",
+"priceRange":"£50-£3000"
 }
 </script>
 
-<!-- Breadcrumb Schema (FIXED) -->
+<!-- BREADCRUMB SCHEMA (VALID – NON-CLICKABLE VISUALLY) -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
 "@type":"BreadcrumbList",
-"itemListElement":[{
+"itemListElement":[
+{
 "@type":"ListItem",
 "position":1,
 "name":"Home",
 "item":"https://homerepairs4u.com/"
-},{
+},
+{
 "@type":"ListItem",
 "position":2,
 "name":"Gutter Services",
 "item":"https://homerepairs4u.com/services/guttering.html"
-},{
+},
+{
 "@type":"ListItem",
 "position":3,
 "name":"Kirk Sandall"
-}]
+}
+]
 }
 </script>
 
-<!-- FAQ Schema -->
+<!-- FAQ SCHEMA -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
 "@type":"FAQPage",
-"mainEntity":[{
+"mainEntity":[
+{
 "@type":"Question",
-"name":"Do you provide gutter clearing near me in Kirk Sandall?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes, we provide local gutter clearing, cleaning and repairs throughout Kirk Sandall and surrounding Doncaster areas."}
-},{
+"name":"How often should gutters be cleared in Kirk Sandall?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Gutters should usually be cleared once or twice a year. Properties near trees in Kirk Sandall may require more frequent maintenance to prevent blockages and overflow."
+}
+},
+{
 "@type":"Question",
-"name":"How often should gutters be cleared?",
-"acceptedAnswer":{"@type":"Answer","text":"Most properties benefit from gutter clearing once or twice a year, especially if surrounded by trees."}
-},{
+"name":"What happens if gutters are not maintained?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Blocked or damaged gutters can cause water to overflow onto brickwork, fascia boards and foundations, leading to damp, leaks and long-term structural issues."
+}
+},
+{
 "@type":"Question",
-"name":"Can you repair leaking gutters?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes. We repair joints, brackets and minor damage, and replace guttering when repairs are no longer effective."}
-}]
+"name":"Do you offer gutter replacement in Kirk Sandall?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes. We repair where possible and provide full gutter replacement when existing systems are beyond repair, using durable materials suitable for long-term performance."
+}
+}
+]
 }
 </script>
 
 </head>
-
 <body>
 
 <header>
@@ -105,62 +123,79 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 
 <main>
 
-<h1>Gutter Services in Kirk Sandall, Doncaster</h1>
+<div class="breadcrumbs">
+<span>Home</span> › <span>Gutter Services</span> › <span>Kirk Sandall</span>
+</div>
+
+<h1>Gutter Clearing, Cleaning & Gutter Services in Kirk Sandall, Doncaster</h1>
 
 <p>
-Home Repairs 4U provides professional gutter clearing, cleaning, repairs and replacement for homes in Kirk Sandall. Our local service helps protect properties from water damage, damp issues and long-term structural problems caused by blocked or failing gutter systems.
+Home Repairs 4U provides professional and reliable gutter services throughout Kirk Sandall and the wider Doncaster area. We help homeowners protect their properties from water damage by ensuring gutters are clear, secure and functioning correctly all year round.
 </p>
 
-<h2>Instant Gutter Quote Calculator</h2>
+<p>
+Gutters play a vital role in directing rainwater safely away from your home. When they become blocked, damaged or misaligned, water can overflow and cause issues such as damp patches, staining, rotting fascia boards and even foundation problems. Our gutter services in Kirk Sandall are designed to prevent these problems before they become costly repairs.
+</p>
 
-<!-- Calculator left EXACTLY as requested -->
-<form id="quoteForm">
-<label for="metres">Total gutter length (metres)</label>
-<input type="number" id="metres" min="1" step="0.1" required>
-
-<div>
-<input type="checkbox" id="clearing"> Gutter clearing
-</div>
-<div>
-<input type="checkbox" id="cleaning"> Gutter cleaning
-</div>
-<div>
-<input type="checkbox" id="replacement"> Gutter replacement
-</div>
-
-<button type="button" onclick="calculateQuote()" class="call-btn">Get Estimate</button>
-</form>
-
-<div id="quoteResult" style="margin-top:22px;font-size:18px;font-weight:bold;"></div>
-
-<script>
-function calculateQuote(){
-const m=parseFloat(document.getElementById('metres').value);
-if(!m||m<=0){alert("Please enter a valid length.");return;}
-let total=0;let items=[];
-if(clearing.checked){let p=m*5;total+=p;items.push(`Gutter clearing: £${p.toFixed(2)}`);}
-if(cleaning.checked){let p=m*5;total+=p;items.push(`Gutter cleaning: £${p.toFixed(2)}`);}
-if(replacement.checked){let p=m*21.5;total+=p;items.push(`Gutter replacement: £${p.toFixed(2)}`);}
-quoteResult.innerHTML=items.length?`<ul>${items.map(i=>`<li>${i}</li>`).join("")}</ul><p><strong>Estimated total: £${total.toFixed(2)}</strong></p>`:"<p>Please select at least one service.</p>";
-}
-</script>
-
-<h2>Our Gutter Services in Kirk Sandall</h2>
-
-<h3>Gutter Clearing</h3>
-<a href="#img1"><img src="/images/clearing-service.webp" alt="Gutter clearing in Kirk Sandall Doncaster" class="service-image"></a>
-<div id="img1" class="lightbox"><a href="#"><img src="/images/clearing-service.webp" alt=""></a></div>
-
-<h3>Gutter Cleaning</h3>
-<a href="#img2"><img src="/images/cleaned-gutters.webp" alt="Gutter cleaning service in Kirk Sandall" class="service-image"></a>
-<div id="img2" class="lightbox"><a href="#"><img src="/images/cleaned-gutters.webp" alt=""></a></div>
-
-<h3>Gutter Repairs & Replacement</h3>
-<a href="#img3"><img src="/images/replaced-gutter.webp" alt="Gutter replacement work in Kirk Sandall" class="service-image"></a>
-<div id="img3" class="lightbox"><a href="#"><img src="/images/replaced-gutter.webp" alt=""></a></div>
+<h2>Local Gutter Services Near You</h2>
 
 <p>
-We work on houses, bungalows and small commercial properties across Kirk Sandall, offering practical advice and dependable workmanship on every job.
+As a local business, we understand the property styles and weather conditions common in Kirk Sandall. From modern estates to older homes, our gutter clearing, cleaning and replacement services are tailored to suit each property. We use safe access methods and professional equipment to complete work efficiently with minimal disruption.
+</p>
+
+<h3>Gutter Clearing</h3>
+
+<p>
+Gutter clearing removes leaves, moss and debris that build up over time. In areas like Kirk Sandall, nearby trees and seasonal weather can cause gutters to block quickly. Regular clearing ensures rainwater flows freely through the system and away from your home.
+</p>
+
+<a href="#clear">
+<img src="/images/clearing-service.webp" alt="Gutter clearing service in Kirk Sandall Doncaster" class="service-image">
+</a>
+<div id="clear" class="lightbox"><a href="#"><img src="/images/clearing-service.webp" alt=""></a></div>
+
+<h3>Gutter Cleaning</h3>
+
+<p>
+External gutter cleaning improves the appearance of your property while helping to extend the life of the guttering. Removing algae, staining and grime allows gutters to dry properly and makes it easier to spot early signs of damage.
+</p>
+
+<a href="#clean">
+<img src="/images/cleaned-gutters.webp" alt="Professional gutter cleaning in Kirk Sandall Doncaster" class="service-image">
+</a>
+<div id="clean" class="lightbox"><a href="#"><img src="/images/cleaned-gutters.webp" alt=""></a></div>
+
+<h3>Gutter Repairs & Replacement</h3>
+
+<p>
+Loose joints, leaks and sagging sections can often be repaired if caught early. Where guttering is beyond repair, we offer full replacement using durable materials designed for long-term performance and reliability.
+</p>
+
+<a href="#replace">
+<img src="/images/replaced-gutter.webp" alt="Gutter replacement work in Kirk Sandall Doncaster" class="service-image">
+</a>
+<div id="replace" class="lightbox"><a href="#"><img src="/images/replaced-gutter.webp" alt=""></a></div>
+
+<h2>Why Gutter Maintenance Matters</h2>
+
+<p>
+Maintaining your gutters helps protect brickwork, rooflines and foundations from water damage. Regular inspections and cleaning reduce the risk of unexpected repairs and help maintain the overall condition and value of your property.
+</p>
+
+<h2>Related Services</h2>
+
+<p>
+We also provide additional exterior services across Doncaster, including
+<a href="/services/pressure-washing.html">pressure washing</a>,
+<a href="/services/upvc-restoration.html">uPVC restoration</a> and
+<a href="/services/fence-installation.html">fence installation</a>.
+Many customers choose to combine services for convenience and efficiency.
+</p>
+
+<h2>Book Gutter Services in Kirk Sandall</h2>
+
+<p>
+If you’re looking for gutter services near you in Kirk Sandall, Home Repairs 4U is here to help. Whether you need routine gutter clearing or a complete replacement, we provide dependable workmanship and clear communication from start to finish.
 </p>
 
 <div style="text-align:center;margin:36px 0;">
@@ -170,10 +205,12 @@ We work on houses, bungalows and small commercial properties across Kirk Sandall
 </main>
 
 <footer>
-© Home Repairs 4U | Gutter Services Kirk Sandall, Doncaster<br>
+© Home Repairs 4U | Gutter Services Kirk Sandall, Doncaster
+<br>
 <a href="/services/guttering.html">Guttering</a>
 <a href="/services/pressure-washing.html">Pressure Washing</a>
-<a href="/services/fence-installation.html">Fencing</a><br>
+<a href="/services/upvc-restoration.html">uPVC Restoration</a>
+<br>
 <a href="https://www.facebook.com/people/Handyman-services/61584395621256/">Facebook</a>
 </footer>
 
