--- a/test.html
+++ b/test.html
@@ -35,18 +35,24 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 <!-- ORGANISATION SCHEMA (VALID) -->
 <script type="application/ld+json">
 {
+<!-- LocalBusiness Schema -->
+<script type="application/ld+json">
+{
 "@context":"https://schema.org",
-"@type":"HomeAndConstructionBusiness",
+"@type":"LocalBusiness",
 "name":"Home Repairs 4U",
 "url":"https://homerepairs4u.com/",
-"logo":"https://homerepairs4u.com/images/logo.webp",
 "telephone":"+447735873694",
-"areaServed":{
-"@type":"Place",
-"name":"Kirk Sandall, Doncaster"
+"priceRange":"£50–£3000",
+"address":{
+"@type":"PostalAddress",
+"addressLocality":"Kirk Sandall",
+"addressRegion":"South Yorkshire",
+"postalCode":"DN3",
+"addressCountry":"GB"
 },
 "openingHours":"Mo-Su 07:00-20:00",
-"priceRange":"£50-£3000"
+"areaServed":["Edenthorpe","Adwick","Hampole","Doncaster"]
 }
 </script>
 
