--- a/services/service-areas.html
+++ b/services/service-areas.html
@@ -55,6 +55,7 @@ Home Repairs 4U provides professional gutter clearing, pressure washing, and oth
 <li><a href="/local/gutter-services-adwick-le-street.html">Adwick-le-Street, Doncaster</a></li>
 <li><a href="/local/gutter-services-askern.html">Askern, Doncaster</a></li>
 <li><a href="/local/gutter-services-sprotbrough.html">Sprotbrough, Doncaster</a></li>
+<li><a href="/local/gutter-services-kirk-sandall.html">Kirk-Sandall, Doncaster</a></li>  
 </ul>
 
 <h2>Pressure Washing Services</h2>
