--- a/local/gutter-services-askern.html
+++ b/local/gutter-services-askern.html
@@ -4,23 +4,23 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Gutter Clearing, Repairs & Replacement in Askern, Doncaster | Home Repairs 4U</title>
+<title>Reliable Gutter Services in Adwick-le-Street, Doncaster | Home Repairs 4U</title>
 
-<link rel="canonical" href="https://homerepairs4u.com/local/gutter-services-askern.html">
+<link rel="canonical" href="https://homerepairs4u.com/local/gutter-services-adwick-le-street.html">
 
-<meta name="description" content="Local gutter clearing, cleaning, repairs and replacement in Askern, Doncaster. Protect your home from water damage. Call 07735 873694 today.">
+<meta name="description" content="Expert gutter clearing, cleaning, repairs, and replacement in Adwick-le-Street, Doncaster. Protect your home with local specialists. Call 07735 873694.">
 
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="preload" as="image" href="/images/logo.webp">
 
 <style>
 html{-webkit-text-size-adjust:100%;}
-body{margin:0;font-family:Arial,sans-serif;background:#f8f8f8;color:#222;line-height:1.75;}
+body{margin:0;font-family:Arial,sans-serif;background:#f7f7f7;color:#222;line-height:1.8;}
 header{background:#fff;padding:26px 12px;text-align:center;border-bottom:4px solid #27ae60;}
 .logo{max-height:90px;width:auto;}
-.call-btn{display:inline-block;margin-top:18px;padding:15px 30px;background:#000;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px;min-height:48px;}
+.call-btn{display:inline-block;margin-top:18px;padding:15px 32px;background:#000;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px;min-height:48px;}
 .call-btn:hover{background:#333;}
-main{max-width:980px;margin:0 auto;background:#fff;padding:30px 20px;}
+main{max-width:1000px;margin:0 auto;background:#fff;padding:32px 22px;}
 h1,h2,h3{color:#111;}
 label{font-weight:bold;display:block;margin-bottom:6px;}
 input[type="number"]{width:100%;padding:12px;font-size:16px;margin-bottom:18px;}
@@ -28,40 +28,47 @@ input[type="number"]{width:100%;padding:12px;font-size:16px;margin-bottom:18px;}
 .form-row input{width:22px;height:22px;}
 button{cursor:pointer;min-height:48px;}
 button:focus,a:focus,input:focus{outline:3px solid #27ae60;outline-offset:2px;}
-.service-image{width:100%;max-width:900px;display:block;margin:24px auto;border-radius:6px;}
-.lightbox{display:none;position:fixed;z-index:9999;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);align-items:center;justify-content:center;}
-.lightbox img{max-width:95%;max-height:95%;border-radius:6px;box-shadow:0 0 25px #000;}
-.lightbox:target{display:flex;}
+.service-image{width:100%;max-width:900px;display:block;margin:28px auto;border-radius:6px;}
 footer{background:#000;color:#fff;text-align:center;padding:28px 15px;margin-top:40px;font-size:14px;}
-footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 #quoteResult ul{padding-left:22px;}
+.breadcrumbs{font-size:14px;margin-bottom:18px;color:#000;}
+.breadcrumbs span{margin:0 6px;}
 </style>
+
+<!-- Breadcrumb Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"BreadcrumbList",
+"itemListElement":[
+{"@type":"ListItem","position":1,"name":"Home","item":"https://homerepairs4u.com/"},
+{"@type":"ListItem","position":2,"name":"Guttering Services","item":"https://homerepairs4u.com/services/guttering.html"},
+{"@type":"ListItem","position":3,"name":"Adwick-le-Street, Doncaster","item":"https://homerepairs4u.com/local/gutter-services-adwick-le-street.html"}
+]
+}
+</script>
 
 <!-- LocalBusiness Schema -->
 <script type="application/ld+json">
 {
-"@context": "https://schema.org",
-"@type": "LocalBusiness",
-"name": "Home Repairs 4U",
-"image": "https://homerepairs4u.com/images/logo.webp",
-"url": "https://homerepairs4u.com/",
-"telephone": "+447735873694",
-"priceRange": "£50–£3000",
-"address": {
-"@type": "PostalAddress",
-"addressLocality": "Askern",
-"addressRegion": "South Yorkshire",
-"postalCode": "DN6",
-"addressCountry": "GB"
+"@context":"https://schema.org",
+"@type":"LocalBusiness",
+"@id":"https://homerepairs4u.com/#localbusiness",
+"name":"Home Repairs 4U",
+"url":"https://homerepairs4u.com/",
+"telephone":"+447735873694",
+"priceRange":"£50–£3000",
+"image":"https://homerepairs4u.com/images/logo.webp",
+"logo":"https://homerepairs4u.com/images/logo.webp",
+"address":{
+"@type":"PostalAddress",
+"addressLocality":"Adwick-le-Street",
+"addressRegion":"South Yorkshire",
+"postalCode":"DN6",
+"addressCountry":"GB"
 },
-"geo": {
-"@type": "GeoCoordinates",
-"latitude": 53.6167,
-"longitude": -1.1522
-},
-"openingHours": "Mo-Su 07:00-20:00",
-"areaServed": ["Askern","Norton","Campsall","Doncaster"],
-"sameAs": ["https://www.facebook.com/people/Handyman-services/61584395621256/"]
+"openingHours":"Mo-Su 07:00-20:00",
+"areaServed":["Adwick-le-Street","Carcroft","Skellow","Doncaster"]
 }
 </script>
 
@@ -73,34 +80,58 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 "mainEntity":[
 {
 "@type":"Question",
-"name":"Why do gutters overflow even when it is not raining heavily?",
+"name":"How often should gutters in Adwick-le-Street be inspected?",
 "acceptedAnswer":{
 "@type":"Answer",
-"text":"Overflowing gutters are often caused by internal blockages, poor alignment, or damaged joints. Even light rainfall can cause problems if water cannot drain properly."
+"text":"We advise inspecting gutters at least twice annually, especially after autumn and winter. Properties near trees or large gardens may require additional checks."
 }
 },
 {
 "@type":"Question",
-"name":"Is gutter cleaning necessary if water appears to be flowing?",
+"name":"Can damaged gutters be repaired without replacement?",
 "acceptedAnswer":{
 "@type":"Answer",
-"text":"Yes. Gutters may appear functional while debris builds up underneath. Regular cleaning helps prevent hidden damage and sudden blockages."
+"text":"Yes. Many issues, including small leaks, misaligned sections, or loose fittings, can be repaired without replacing the entire gutter system."
 }
 },
 {
 "@type":"Question",
-"name":"Do you offer estimates without a site visit?",
+"name":"When is full gutter replacement necessary?",
 "acceptedAnswer":{
 "@type":"Answer",
-"text":"Yes. Our online calculator provides a quick estimate based on gutter length and selected services."
+"text":"Replacement is recommended when gutters are rusted, cracked, or otherwise beyond repair. Our team provides an assessment to determine the best solution for your home."
 }
 },
 {
 "@type":"Question",
-"name":"Can damaged gutters be repaired instead of replaced?",
+"name":"Do you provide quotes before starting work?",
 "acceptedAnswer":{
 "@type":"Answer",
-"text":"In many cases, small leaks or loose sections can be repaired. Replacement is recommended only when guttering is beyond economical repair."
+"text":"Yes. You can use the quote calculator on this page or contact us to arrange a no-obligation on-site estimate."
+}
+},
+{
+"@type":"Question",
+"name":"Can gutter services be combined with other home maintenance?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Absolutely. Clients often combine gutter services with <a href='/services/pressure-washing.html'>pressure washing</a> or <a href='/services/upvc-restoration.html'>uPVC restoration</a> for comprehensive property maintenance."
+}
+},
+{
+"@type":"Question",
+"name":"Do you offer emergency gutter repairs?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes, we provide urgent services for leaking or blocked gutters that require immediate attention to prevent water damage."
+}
+},
+{
+"@type":"Question",
+"name":"Can blocked gutters cause structural problems?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes. Overflowing water can damage walls, foundations, and landscaping if left untreated."
 }
 }
 ]
@@ -111,7 +142,7 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 <body>
 
 <header>
-<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="lazy">
 <br>
 <a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a><br>
 <a href="tel:+447735873694" class="call-btn">Call 07735 873694</a>
@@ -119,17 +150,31 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 
 <main>
 
-<h1>Gutter Maintenance and Replacement Services in Askern, Doncaster</h1>
+<nav class="breadcrumbs" aria-label="Breadcrumb">
+Home <span>›</span> Guttering Services <span>›</span> <strong>Adwick-le-Street, Doncaster</strong>
+</nav>
+
+<h1>Expert Gutter Services in Adwick-le-Street</h1>
 
 <p>
-Home Repairs 4U provides dependable gutter services to homeowners and small businesses throughout Askern. Gutters are one of the most important but overlooked parts of a property, quietly directing rainwater away from walls, roofs, and foundations. When they fail, the damage can be costly and disruptive.
+Gutters play a critical role in protecting your Adwick-le-Street home from water damage, damp, and structural issues. At Home Repairs 4U, we provide local, professional services including gutter clearing, cleaning, repairs, and replacement, tailored to your property and local environmental conditions.
 </p>
 
 <p>
-Askern properties are exposed to seasonal rainfall, falling leaves, moss growth, and general wear over time. Without regular attention, gutters can become blocked or start to deteriorate. Our service is designed to keep everything working correctly, helping protect your home and avoid unnecessary repairs.
+For all areas we cover across Doncaster and neighbouring communities, please see our <a href="/services/service-areas.html">Service Areas</a> page.
 </p>
 
-<h2>Instant Gutter Quote Calculator</h2>
+<h2>Why Adwick-le-Street Homes Need Specialist Gutter Care</h2>
+
+<p>
+Adwick-le-Street features a range of property styles, from Victorian terraces to modern semi-detached and detached homes. Older properties often have traditional guttering that may require bespoke solutions, while newer builds may suffer from blocked or poorly maintained systems. Seasonal rainfall, wind, and tree debris all contribute to potential gutter issues.
+</p>
+
+<p>
+Our team evaluates each property individually, taking into account roof pitch, gutter type, and local conditions to ensure a solution that protects your home while minimizing unnecessary costs.
+</p>
+
+<h2>Quick and Accurate Quotes</h2>
 
 <form id="quoteForm">
 <label for="metres">Total gutter length (metres)</label>
@@ -137,12 +182,12 @@ Askern properties are exposed to seasonal rainfall, falling leaves, moss growth,
 
 <div class="form-row">
 <input type="checkbox" id="clearing">
-<label for="clearing">Gutter clearing inside gutters</label>
+<label for="clearing">Gutter clearing</label>
 </div>
 
 <div class="form-row">
 <input type="checkbox" id="cleaning">
-<label for="cleaning">Gutter cleaning external side</label>
+<label for="cleaning">Gutter cleaning</label>
 </div>
 
 <div class="form-row">
@@ -153,7 +198,7 @@ Askern properties are exposed to seasonal rainfall, falling leaves, moss growth,
 <button type="button" onclick="calculateQuote()" class="call-btn">Get Estimate</button>
 </form>
 
-<div id="quoteResult" style="margin-top:22px;font-size:18px;font-weight:bold;"></div>
+<div id="quoteResult" role="alert" aria-live="polite" style="margin-top:22px;font-size:18px;font-weight:bold;"></div>
 
 <script>
 function calculateQuote(){
@@ -178,65 +223,89 @@ items.length
 }
 </script>
 
-<h2>Why Gutter Care Is Especially Important in Askern</h2>
+<h2>Gutter Clearing in Adwick-le-Street</h2>
 
 <p>
-Many properties in Askern are surrounded by trees, hedges, and green spaces. While this adds to the area’s character, it also means gutters can fill quickly with leaves and organic debris. Once blocked, rainwater has nowhere to go and begins spilling over the edges.
+Leaves, twigs, and moss can quickly block gutters in Adwick-le-Street, especially during autumn. Our clearing service ensures gutters and downpipes flow freely, preventing overflow, water damage, and staining. Nearby locations we serve include <a href="/local/gutter-services-carcroft.html">Carcroft</a> and <a href="/local/gutter-services-skellow.html">Skellow</a>.
 </p>
+
+<img src="/images/clearing-service.webp" alt="Gutter clearing on an Adwick-le-Street home" class="service-image" loading="lazy">
+
+<h2>Comprehensive Gutter Cleaning</h2>
 
 <p>
-This overflow can soak brickwork, run behind fascia boards, and gradually weaken external walls. Inside the property, it may appear as damp patches, mould growth, or peeling paint. Regular inspection and maintenance help avoid these problems before they become serious.
+Cleaning gutters removes moss, algae, and grime that can trap moisture and accelerate deterioration. Our team ensures gutters dry efficiently, improving function, longevity, and the overall appearance of your home.
 </p>
 
-<h2>Our Gutter Services in Detail</h2>
+<img src="/images/cleaned-gutters.webp" alt="Cleaned gutters on an Adwick-le-Street home" class="service-image" loading="lazy">
 
-<h3>Gutter Clearing</h3>
+<h2>Repairs & Replacement Services</h2>
+
 <p>
-Clearing focuses on removing leaves, moss, silt, and debris from inside the gutter system. We ensure downpipes are also checked so water can drain freely away from the building.
+Minor issues such as leaks, loose fittings, or misaligned sections can often be repaired without full replacement. Replacement is recommended when gutters are beyond repair, using durable materials to provide long-lasting protection. Residents across Adwick-le-Street and nearby <a href="/local/gutter-services-doncaster.html">Doncaster</a> rely on us for expert solutions.
 </p>
 
-<a href="#clearing-lightbox">
-<img src="/images/clearing-service.webp" alt="Gutter clearing carried out on a property in Askern Doncaster" class="service-image">
-</a>
-<div id="clearing-lightbox" class="lightbox"><a href="#"><img src="/images/clearing-service.webp" alt="Gutter clearing carried out on a property in Askern Doncaster"></a></div>
+<img src="/images/replaced-gutter.webp" alt="New gutter replacement on an Adwick-le-Street home" class="service-image" loading="lazy">
 
-<h3>Gutter Cleaning</h3>
-<p>
-External gutter cleaning removes surface staining, algae, and grime that build up over time. This not only improves appearance but also helps prevent long-term surface damage caused by trapped moisture.
-</p>
-
-<a href="#cleaned-lightbox">
-<img src="/images/cleaned-gutters.webp" alt="Cleaned guttering on a home in Askern" class="service-image">
-</a>
-<div id="cleaned-lightbox" class="lightbox"><a href="#"><img src="/images/cleaned-gutters.webp" alt="Cleaned guttering on a home in Askern"></a></div>
-
-<h3>Gutter Repairs and Replacement</h3>
-<p>
-Loose joints, sagging sections, and minor leaks can often be repaired quickly. When guttering has cracked, warped, or reached the end of its lifespan, replacement provides a reliable long-term solution.
-</p>
-
-<a href="#replaced-lightbox">
-<img src="/images/replaced-gutter.webp" alt="New gutter replacement installed in Askern Doncaster" class="service-image">
-</a>
-<div id="replaced-lightbox" class="lightbox"><a href="#"><img src="/images/replaced-gutter.webp" alt="New gutter replacement installed in Askern Doncaster"></a></div>
-
-<h2>What Sets Home Repairs 4U Apart</h2>
+<h2>Seasonal Maintenance Advice</h2>
 
 <ul>
-<li>Local knowledge of Askern and surrounding villages</li>
-<li>Fully insured, experienced tradespeople</li>
-<li>Safe access methods for all property types</li>
-<li>Clear pricing and honest advice</li>
-<li>Support available when urgent issues arise</li>
+<li>Inspect gutters twice a year and after storms.</li>
+<li>Remove debris, moss, and leaves promptly.</li>
+<li>Check brackets and joints for stability.</li>
+<li>Ensure downpipes are clear of blockages.</li>
+<li>Consider professional assistance for high or hard-to-reach gutters.</li>
 </ul>
 
-<h2>Arrange Gutter Services in Askern</h2>
+<h2>Nearby Locations We Serve</h2>
 
 <p>
-If your gutters are leaking, overflowing, or overdue for attention, Home Repairs 4U is ready to help. Use the calculator above for a quick estimate or contact us directly to arrange a visit.
+In addition to Adwick-le-Street, we offer services in <a href="/local/gutter-services-carcroft.html">Carcroft</a>, <a href="/local/gutter-services-skellow.html">Skellow</a>, and <a href="/local/gutter-services-doncaster.html">Doncaster</a>. Each property is individually assessed for the most suitable maintenance or repair solutions.
 </p>
 
-<div style="text-align:center;margin:38px 0;">
+<h2>Frequently Asked Questions</h2>
+
+<h3>How often should gutters be maintained?</h3>
+<p>Inspect at least twice yearly, particularly after autumn. Homes near large trees may need additional checks.</p>
+
+<h3>Can minor gutter problems be repaired without replacement?</h3>
+<p>Yes. Leaks, misaligned sections, or loose brackets can usually be fixed without replacing the entire system.</p>
+
+<h3>Do you offer full gutter replacement?</h3>
+<p>Replacement is provided only when necessary, using high-quality materials for durability.</p>
+
+<h3>Can gutter services be combined with other property maintenance?</h3>
+<p>Yes, including <a href="/services/pressure-washing.html">pressure washing</a> and <a href="/services/upvc-restoration.html">uPVC restoration</a> for a complete property refresh.</p>
+
+<h3>Do you offer emergency gutter repairs?</h3>
+<p>Yes. We provide urgent services for leaking or blocked gutters that require immediate attention.</p>
+
+<h3>Can blocked gutters cause structural damage?</h3>
+<p>Yes. Overflowing water can affect walls, foundations, and landscaping if not addressed.</p>
+
+<h2>Other Services for Adwick-le-Street Homes</h2>
+
+<p>
+Consider <a href="/services/pressure-washing.html">pressure washing</a> for patios, driveways, and walls, or <a href="/services/upvc-restoration.html">uPVC restoration</a> for windows and doors. Combining services maintains property value and appearance efficiently.
+</p>
+
+<h2>Why Choose Home Repairs 4U in Adwick-le-Street?</h2>
+
+<ul>
+<li>Expert knowledge of local property types and environmental conditions</li>
+<li>Clear, honest advice for every project</li>
+<li>Safe, professional working practices</li>
+<li>Transparent estimates with no hidden costs</li>
+<li>Reliable and trusted service across Adwick-le-Street and surrounding areas</li>
+</ul>
+
+<h2>Book Your Gutter Service Today</h2>
+
+<p>
+If your gutters are blocked, leaking, or require maintenance, Home Repairs 4U is ready to help. Use the quote calculator above or call to arrange a professional visit.
+</p>
+
+<div style="text-align:center;margin:40px 0;">
 <a href="tel:+447735873694" class="call-btn">Call 07735 873694</a>
 </div>
 
@@ -244,7 +313,6 @@ If your gutters are leaking, overflowing, or overdue for attention, Home Repairs
 
 <footer>
 <p>📞 Call 07735 873694</p>
-<footer style="background:#000; color:#fff; text-align:center; padding:28px 15px; font-size:14px;">
 <div>
 © Home Repairs 4U | Service Areas, Doncaster
 <br><br>
@@ -259,8 +327,7 @@ If your gutters are leaking, overflowing, or overdue for attention, Home Repairs
 
 <a href="https://www.facebook.com/people/Handyman-services/61584395621256/"
 target="_blank"
-rel="noopener"
-style="color:#fff; text-decoration:underline;">
+rel="noopener" style="color:#fff; text-decoration:underline;">
 Facebook
 </a>
 </div>
